--- a/.gitignore
+++ b/.gitignore
@@ -3,18 +3,28 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
 # Dependencies
-**/node_modules/
+node_modules/
 client/node_modules/
 server/node_modules/
+
+# Production builds
+client/dist/
+client/build/
+server/dist/
 dist/
-dist-ssr
 build/
-*.local
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Key and Certificate
+server.key
+server.crt
 
 # Runtime data
 pids
@@ -22,61 +32,33 @@ pids
 *.seed
 *.pid.lock
 
-# Coverage directory used by tools like istanbul
+# Coverage
 coverage/
 *.lcov
-
-# nyc test coverage
 .nyc_output
-
-# Dependency directories
-node_modules/
 
 # TypeScript
 *.tsbuildinfo
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-!.vscode/settings.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.swp
-*~
-
-# OS generated files
+# OS generated
 .DS_Store
 .DS_Store?
 ._*
-.Spotlight-V100
-.Trashes
 ehthumbs.db
 Thumbs.db
 
-# Production builds
-client/dist/
-client/build/
-server/dist/
-
-# Environment variables
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env.*.local
-
-# Prisma
-prisma/migrations/
-!prisma/migrations/0_init_migration/  # Исключение для миграций
+# Editors
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea/
+*.swp
+*~
 
 # Docker
+.dockerignore
 Dockerfile.*
 docker-compose.*
-.dockerignore
 
 # Testing
 /coverage
