ver 0.4: crt.new_server_architecture(PDD) crt.exercises/profile/favourites_models

--- a/server/package.json
+++ b/server/package.json
@@ -3,13 +3,19 @@
   "version": "1.0.0",
   "type": "commonjs",
   "main": "dist/server.js",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "scripts": {
     "dev": "nodemon src/server.ts",
     "start": "node dist/server.js",
     "build": "tsc",
     "db:push": "prisma db push",
     "db:generate": "prisma generate",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "db:seed": "prisma db seed",
+    "db:migrate": "prisma migrate dev",
+    "db:reset": "prisma migrate reset"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +38,7 @@
     "@types/node": "^25.2.3",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
